2008-01-24  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/python/setup.py: Changed search method to find openbabel.so
	(may need testing on other platforms)
	* scripts/openbabel-perl.i: Updated to make identical (in terms of
	includes and header files) to python wrapper.

2008-01-24  Chris Morley
	
	* src/formats/inchiformat.cpp(WriteMolecule): remove #ifdef _WIN32
	from InChIKey code.

2008-01-24  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/Makefile.am,Makefile.in: Incorporated Rich Apodaca's fix
	for Ruby OpenBabel error message "undefined symbol: Init_openbabel"
	* scripts/openbabel-ruby.i: Updated to include same header files as
	openbabel-python, but commented out problematic obfingerprint.h. Also
	upper-cased the first letter of the templates to avoid warning
	messages, and then needed to rename template VectorData to
	VectorGenericData to avoid a conflict with another object of the same
	name in OpenBabel.

2008-01-22  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/ops.cpp, src/pointgroup.cpp, src/kekulize.cpp, src/mol.cpp,
	src/obutil.cpp, src/ring.cpp, src/atom.cpp,
	src/forcefields/forcefielduff.cpp,
	src/forcefields/forcefieldmmff94.cpp,
	src/forcefields/forcefieldghemical.cpp,
	src/formats/cansmilesformat.cpp: Fix GCC warnings, adding explicit
	braces for if/else statements, explicit () around logic
	statements, etc.

	* include/openbabel/ring.h (GetRootAtom): Return unsigned int for
	comparison with atom indexes.

	* include/openbabel/plugin.h: Remove unused parameter for warning
	reduction.

2008-01-22  Chris Morley

	* src/formats/mdlformat.cpp(WriteMolecule): CHG line output
	corrected.

2008-01-22  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/yasaraformat.cpp: replaced const char* by string.

2008-01-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/atom.h, src/atom.cpp: Handle SetType(string)
	as const as well.

	* src/obconversion.cpp: When looking for .gz extensions, make sure